--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -4,15 +4,16 @@ RUN apt update && \
     apt install -y \
     build-essential patch ruby-dev tzdata \
     libpq-dev postgresql-contrib vim \
-    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
-COPY Gemfile Gemfile.lock ./
+COPY Gemfile* ./
 
 RUN gem install bundler && bundle install
 
-COPY . .
+COPY . /app
 
 EXPOSE 3000
 
