--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -12,6 +12,22 @@ services:
     volumes:
       - db-postgres:/var/lib/postgresql/data
 
+  redis:
+    container_name: redis
+    image: redis:7.2.4-alpine
+    volumes:
+      - redis:/data
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    command: --databases 100
+    ports:
+      - "6379:6379"
+    tty: true
+    healthcheck:
+      test: redis-cli ping
+      interval: 300s
+      timeout: 10s
+
   rails-app:
     build:
       context: .
@@ -28,8 +44,11 @@ services:
       - .:/app
     depends_on:
       - postgres
+      - redis
     links:
       - postgres:db
+      - redis:redis
 
 volumes:
   db-postgres: {}
+  redis:
