Feat: Fix sessions, add database seeds, implement pundit policies, tests, improve dashboard UI, add error handling and logging

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
+# Rails application configuration
 RAILS_MASTER_KEY=your-master-key
+
+# Database configuration
+DATABASE_HOST=localhost
+DATABASE_NAME=rails_boiler_plate_development
+DATABASE_USER=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_PORT=5432
